# gammacombo

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  environment.yml
.github/workflows/: main.yml
Lb2pktaul/: CMakeLists.txt  README.md  Snakefile
Lb2pktaul/include/: PDF_Cartesian.h  PDF_Circle.h  PDF_DatasetLb2pktaul.h  PDF_Gaus.h  PDF_rb.h  ParametersCartesian.h
Lb2pktaul/main/: Lb2pktaul_dataset.cpp  Lb2pktaul_dataset_build_workspace.cpp  Lb2pktaul_dataset_multipdf.cpp
Lb2pktaul/src/: PDF_Circle.cpp  PDF_DatasetLb2pktaul.cpp  PDF_Gaus.cpp
Lb2pktaul_highBDTCut/: CMakeLists.txt  README.md  Snakefile
Lb2pktaul_highBDTCut/include/: PDF_CrossCorAbs.h  ParametersLb2pktaul.h
Lb2pktaul_highBDTCut/main/: Lb2pktaul_highBDTCut.cpp  Lb2pktaul_highBDTCut2.cpp  Lb2pktaul_highBDTCut_dataset.cpp  Lb2pktaul_highBDTCut_dataset_build_workspace.cpp  Lb2pktaul_highBDTCut_dataset_multipdf.cpp
Lb2pktaul_highBDTCut/src/: PDF_CrossCorAbs.cpp  PDF_CrossCor_GausA_vs_GausB.cpp  PDF_Gaus2d.cpp  PDF_GausB.cpp  ParametersLb2pktaul.cpp
cmake/: FindROOT.cmake  combiners.cmake  macros.cmake  settings.cmake
core/include/: BatchScriptWriter.h  CLInterval.h  CLIntervalMaker.h  CLIntervalPrinter.h  ColorBuilder.h  Combiner.h  ConfidenceContours.h  Contour.h  ControlPlots.h  ExternalScanWrapper.h  FileNameBuilder.h  FitResultCache.h  FitResultDump.h  Fitter.h  GammaComboEngine.h  Graphviz.h  LatexMaker.h  MethodAbsScan.h  MethodBergerBoosScan.h  MethodCoverageScan.h  MethodDatasetsPluginScan.h  MethodDatasetsProbScan.h  MethodPluginScan.h  MethodProbScan.h  OneMinusClPlot.h  OneMinusClPlot2d.h  OneMinusClPlotAbs.h  OptParser.h  PDF_Abs.h  PDF_Datasets.h  PValueCorrection.h  Parameter.h  ParameterCache.h  ParameterEvolutionPlotter.h  ParametersAbs.h  ProgressBar.h  PullPlotter.h  RooBinned2DBicubicBase.h  RooCrossCorPdf.h  RooHistPdfAngleVar.h  (+13 more)
core/include/tclap/: Arg.h  ArgException.h  StandardTraits.h  ValuesConstraint.h
core/src/: BatchScriptWriter.cpp  CLInterval.cpp  CLIntervalMaker.cpp  CLIntervalPrinter.cpp  ColorBuilder.cpp  Combiner.cpp  ConfidenceContours.cpp  Contour.cpp  ControlPlots.cpp  ExternalScanWrapper.cpp  FileNameBuilder.cpp  FitResultCache.cpp  FitResultDump.cpp  Fitter.cpp  GammaComboEngine.cpp  Graphviz.cpp  LatexMaker.cpp  MethodAbsScan.cpp  MethodBergerBoosScan.cpp  MethodCoverageScan.cpp  MethodDatasetsPluginScan.cpp  MethodDatasetsProbScan.cpp  MethodPluginScan.cpp  MethodProbScan.cpp  OneMinusClPlot.cpp  OneMinusClPlot2d.cpp  OneMinusClPlotAbs.cpp  OptParser.cpp  PDF_Abs.cpp  PDF_Datasets.cpp  PValueCorrection.cpp  Parameter.cpp  ParameterCache.cpp  ParameterEvolutionPlotter.cpp  ParametersAbs.cpp  ProgressBar.cpp  PullPlotter.cpp  RooBinned2DBicubicBase.cpp  RooCrossCorPdf.cpp  RooHistPdfAngleVar.cpp  (+11 more)
doc/: Doxyfile.in
scripts/: HFAGLabel.C  cam_condor_reqs.txt  cern_condor_reqs.txt  cern_condor_reqs_1hour.txt  cern_condor_reqs_2hour.txt  check_batch_jobs.py  deep_git.py  dressPlot.py  gc.mplstyle  gc_mpl.py  gc_mpl_tools.py  make_coverage_table.py  make_html.py  plot1Dfrom2D.py  plotModuleExample.py  plotScanBestPluginToys.py  pyfitres.py  run_ci_tests.py  setup-env-cvmfs.sh  setup_lxplus.sh
tutorial/: CMakeLists.txt  Snakefile
tutorial/include/: PDF_Cartesian.h  PDF_Circle.h  PDF_CrossCorAbs.h  PDF_CrossCor_GausA_vs_GausB.h  PDF_DatasetTutorial.h  PDF_Gaus.h  PDF_Gaus2d.h  PDF_GausB.h  PDF_rb.h  ParametersCartesian.h  ParametersTutorial.h
tutorial/main/: cartesian.cpp  multipdftest.cpp  tutorial.cpp  tutorial2.cpp  tutorial_dataset.cpp  tutorial_dataset_build_workspace.cpp  tutorial_dataset_multipdf.cpp  tutorial_dataset_multipdf_build_workspace.cpp
tutorial/src/: PDF_Cartesian.cpp  PDF_Circle.cpp  PDF_CrossCorAbs.cpp  PDF_CrossCor_GausA_vs_GausB.cpp  PDF_DatasetTutorial.cpp  PDF_Gaus.cpp  PDF_Gaus2d.cpp  PDF_GausB.cpp  PDF_rb.cpp  ParametersCartesian.cpp  ParametersTutorial.cpp
